Add Upload Image

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # Instakkasi Database
 logging.level.org.springframework=info
-spring.datasource.url=jdbc:postgresql://localhost:5432/forumJava
+spring.datasource.url=jdbc:postgresql://localhost:5432/forumbejava
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 
@@ -9,3 +9,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto=update
+spring.servlet.multipart.max-file-size=1MB
+spring.servlet.multipart.max-request-size=1MB
