--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -11,3 +11,10 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.servlet.multipart.max-file-size=1MB
 spring.servlet.multipart.max-request-size=1MB
+
+#App Properties
+farida.app.jwtCookieName=rida-jwt
+farida.app.jwtRefreshCookieName=rida-jwt-refresh
+farida.app.jwtSecret=riDaSecretKey
+farida.app.jwtExpirationMs=60000
+farida.app.jwtRefreshExpirationMs=120000
