--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+# ip wifi
+server.address=10.10.102.48
+
 # Instakkasi Database
 logging.level.org.springframework=info
 spring.datasource.url=jdbc:postgresql://localhost:5432/forumbejava
@@ -16,5 +19,8 @@ spring.servlet.multipart.max-request-size=1MB
 farida.app.jwtCookieName=rida-jwt
 farida.app.jwtRefreshCookieName=rida-jwt-refresh
 farida.app.jwtSecret=riDaSecretKey
-farida.app.jwtExpirationMs=60000
-farida.app.jwtRefreshExpirationMs=120000
+farida.app.jwtExpirationMs=6000000
+farida.app.jwtRefreshExpirationMs=1200000
+
+# cors.allowed-origins=http://localhost:8081,http://localhost:8080/api/auth/signin
+cors.allowed-origins=http://10.10.102.48:8081,http://localhost:10.10.102.48/api/auth/signin
