--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # ip wifi
-server.address=10.10.102.97
+# server.address=10.10.102.90
 
 # Instakkasi Database
 logging.level.org.springframework=info
@@ -19,8 +19,9 @@ spring.servlet.multipart.max-request-size=1MB
 farida.app.jwtCookieName=rida-jwt
 farida.app.jwtRefreshCookieName=rida-jwt-refresh
 farida.app.jwtSecret=riDaSecretKey
-farida.app.jwtExpirationMs=6000000
-farida.app.jwtRefreshExpirationMs=1200000
+farida.app.jwtExpirationMs=86400000 
+farida.app.jwtRefreshExpirationMs=86400000 
 
-# cors.allowed-origins=http://localhost:8081,http://localhost:8080/api/auth/signin
-cors.allowed-origins=http://10.10.102.97:8081,http://localhost:10.10.102.97/api/auth/signin
+cors.allowed-origins=http://localhost:8081,http://localhost:8080/api/auth/signin
+# cors.allowed-origins=http://10.10.102.90:8081,http://localhost:10.10.102.90/api/auth/signin
+
